# wiktionary-fi-bot

./: Cargo.toml  LICENSE  Procfile  README.md  setup_bot_hook.sh  wrangler.toml
src/: appstate.rs  domops.rs  lib.rs  main.rs  messagestate.rs  req.rs  selectors.rs
