[package]
name = "fiwiki"
version = "0.1.0"
edition = "2021"


[dependencies]
scraper = "0.12.0"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
axum = "0.5.3"
ego-tree = "0.6.2"

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.reqwest]
version = "0.11"
features = ["rustls", "gzip"]


